made problem link a cursor and fixed spacing in workspace name

--- a/scss/_workspace.scss
+++ b/scss/_workspace.scss
@@ -131,6 +131,10 @@
   }
 }
 
+.workspace-name {
+  margin-right: 0;
+}
+
 #workspace_listing {
   position: relative;
   top: 65px;
@@ -161,6 +165,10 @@
     background: lighten($accent-yellow, 10%);
   }
 
+}
+
+.problem-link {
+  cursor: pointer;
 }
 
 .workspaceOwner.isMine {
